==> py32duino/Arduino-PY32/cores/arduino/py32/usb/usbd_conf.c <==
#include "usbd_core.h"
#include "usbd_if.h"
#include "usbd_ep_conf.h"
#include "py32yyxx_ll_pwr.h"
  #define VBUS_SENSING DISABLE
  #define VBUS_SENSING ENABLE

void HAL_PCD_MspInit(PCD_HandleTypeDef *hpcd)
{
  const PinMap *map = NULL;

#if defined(PIN_UCPD_TCPP)
  /* Set TCPP default state: Type-C legacy */
  pinMode(PIN_UCPD_TCPP, OUTPUT_OPEN_DRAIN);
  digitalWriteFast(digitalPinToPinName(PIN_UCPD_TCPP), LOW);
#endif

#if defined(PWR_CR2_USV) || defined(PWR_SVMCR_USV)
  /* Enable VDDUSB on Pwrctrl CR2 register*/
  HAL_PWREx_EnableVddUSB();
#endif
#ifdef PY32H7xx
  if (!LL_PWR_IsActiveFlag_USB()) {
    HAL_PWREx_EnableUSBVoltageDetector();
  }
#endif
#if defined (USB)
  if (hpcd->Instance == USB) {

    /* Configure USB FS GPIOs */
    map = PinMap_USB;
    while (map->pin != NC) {
      pin_function(map->pin, map->function);
      map++;
    }

    /* Enable USB FS Clock */
    __HAL_RCC_USB_CLK_ENABLE();

#if defined(SYSCFG_CFGR1_USB_IT_RMP) && defined(USE_USB_INTERRUPT_REMAPPED)
    /* USB interrupt remapping enable */
    __HAL_REMAPINTERRUPT_USB_ENABLE();
#endif

#if defined(USB_H_IRQn)
    /* Set USB High priority Interrupt priority */
    HAL_NVIC_SetPriority(USB_HP_IRQn, USBD_IRQ_PRIO, USBD_IRQ_SUBPRIO);
    /* Enable USB High priority Interrupt */
    HAL_NVIC_EnableIRQ(USB_HP_IRQn);
#endif
    /* Set USB Interrupt priority */
    HAL_NVIC_SetPriority(USB_IRQn, USBD_IRQ_PRIO, USBD_IRQ_SUBPRIO);

    /* Enable USB Interrupt */
    HAL_NVIC_EnableIRQ(USB_IRQn);

    if (hpcd->Init.low_power_enable == 1) {
      /* Enable EXTI for USB wakeup */
#ifdef __HAL_USB_WAKEUP_EXTI_CLEAR_FLAG
      __HAL_USB_WAKEUP_EXTI_CLEAR_FLAG();
#endif
#ifdef __HAL_USB_WAKEUP_EXTI_ENABLE_RISING_EDGE
      __HAL_USB_WAKEUP_EXTI_ENABLE_RISING_EDGE();
#endif
      __HAL_USB_WAKEUP_EXTI_ENABLE_IT();
#if defined(USB_WKUP_IRQn)
      /* USB Wakeup Interrupt */
      HAL_NVIC_EnableIRQ(USB_WKUP_IRQn);

      /* Enable USB Wake-up interrupt */
      HAL_NVIC_SetPriority(USB_WKUP_IRQn, 0, 0);
#endif
    }
  }
#endif /* USB */
#if defined (USB_OTG_FS)
  if (hpcd->Instance == USB_OTG_FS) {

    /* Configure USB FS GPIOs */
    map = PinMap_USB_OTG_FS;
    while (map->pin != NC) {
      pin_function(map->pin, map->function);
      map++;
    }

    /* Enable USB FS Clock */
    __HAL_RCC_USB_OTG_FS_CLK_ENABLE();

    /* Set USB FS Interrupt priority */
    HAL_NVIC_SetPriority(OTG_FS_IRQn, USBD_IRQ_PRIO, USBD_IRQ_SUBPRIO);

    /* Enable USB FS Interrupt */
    HAL_NVIC_EnableIRQ(OTG_FS_IRQn);

    if (hpcd->Init.low_power_enable == 1) {
      /* Enable EXTI Line 18 for USB wakeup */
#ifdef __HAL_USB_OTG_FS_WAKEUP_EXTI_CLEAR_FLAG
      __HAL_USB_OTG_FS_WAKEUP_EXTI_CLEAR_FLAG();
#endif
#ifdef __HAL_USB_OTG_FS_WAKEUP_EXTI_ENABLE_RISING_EDGE
      __HAL_USB_OTG_FS_WAKEUP_EXTI_ENABLE_RISING_EDGE();
#endif
#ifdef __HAL_USB_OTG_FS_WAKEUP_EXTI_ENABLE_IT
      __HAL_USB_OTG_FS_WAKEUP_EXTI_ENABLE_IT();
#endif
#if !defined(PY32L4xx) && !defined(PY32U5xx)
      /* Set EXTI Wakeup Interrupt priority */
      HAL_NVIC_SetPriority(OTG_FS_WKUP_IRQn, USBD_IRQ_PRIO, USBD_IRQ_SUBPRIO);

      /* Enable EXTI Interrupt */
      HAL_NVIC_EnableIRQ(OTG_FS_WKUP_IRQn);
#endif
    }
  }
#endif /* USB_OTG_FS */
#if defined (USB_OTG_HS)
  if (hpcd->Instance == USB_OTG_HS)  {
    /* Configure USB HS GPIOs */
    map = PinMap_USB_OTG_HS;
    while (map->pin != NC) {
      pin_function(map->pin, map->function);
      map++;
    }
#ifndef USE_USB_HS_IN_FS
    __HAL_RCC_USB_OTG_HS_ULPI_CLK_ENABLE();
#endif /* USE_USB_HS_IN_FS */

    /* Enable USB HS Clocks */
    __HAL_RCC_USB_OTG_HS_CLK_ENABLE();

    /* Set USB HS Interrupt priority */
    HAL_NVIC_SetPriority(OTG_HS_IRQn, USBD_IRQ_PRIO, USBD_IRQ_SUBPRIO);

    /* Enable USB HS Interrupt */
    HAL_NVIC_EnableIRQ(OTG_HS_IRQn);

    if (hpcd->Init.low_power_enable == 1) {
      /* Enable EXTI Line 20 for USB wakeup */
#ifdef __HAL_USB_OTG_HS_WAKEUP_EXTI_CLEAR_FLAG
      __HAL_USB_OTG_HS_WAKEUP_EXTI_CLEAR_FLAG();
#endif
#ifdef __HAL_USB_OTG_HS_WAKEUP_EXTI_ENABLE_RISING_EDGE
      __HAL_USB_OTG_HS_WAKEUP_EXTI_ENABLE_RISING_EDGE();
#endif
      __HAL_USB_OTG_HS_WAKEUP_EXTI_ENABLE_IT();

      /* Set EXTI Wakeup Interrupt priority */
      HAL_NVIC_SetPriority(OTG_HS_WKUP_IRQn, USBD_IRQ_PRIO, USBD_IRQ_SUBPRIO);

      /* Enable EXTI Interrupt */
      HAL_NVIC_EnableIRQ(OTG_HS_WKUP_IRQn);
    }
  }
#endif /* USB_OTG_HS */
}

void HAL_PCD_MspDeInit(PCD_HandleTypeDef *hpcd)
{
  /* Disable USB FS Clock */
#if defined (USB)
  if (hpcd->Instance == USB) {
    __HAL_RCC_USB_CLK_DISABLE();
  }
#endif
#if defined (USB_OTG_FS)
  if (hpcd->Instance == USB_OTG_FS) {
    /* Disable USB FS Clock */
    __HAL_RCC_USB_OTG_FS_CLK_DISABLE();
  }
#endif
#if defined (USB_OTG_HS)
  if (hpcd->Instance == USB_OTG_HS) {
    /* Disable USB HS Clocks */
    __HAL_RCC_USB_OTG_HS_CLK_DISABLE();
  }
#endif /* USB_OTG_HS */
}
